# vitodo

./: CHANGELOG.md  README.md  pyproject.toml
.github/: gitcliff.yml  release.yml
.github/workflows/: release.yml
src/vitodo/: app.py  config.py  helpers.py  logger.py  messages.py  parser.py  types.py  visual.py
src/vitodo/views/: eisenhower.py  grouped.py
wiki/: Eisenhower-Matrix-View.md  General.md  Grouped-View.md  Home  Visual.md
